<resources>
    <string name="app_name">Smart Measurer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="android_studio">Android Studio</string>
    <string name="start">Iniciar</string>
    <string name="next">Avançar</string>
    <string name="skip">Pular</string>
    <string name="bem_vindo">Bem-vindo</string>
    <string name="saiba_mais">SAIBA MAIS</string>
    <string name="smart_measurer"> Smart Measurer</string>
    <string name="desenvolvido_por">Desenvolvido por:</string>
    <string name="start1">start</string>
    <string name="todo90">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="todo4">TODO4</string>
    <string name="todo5">TODO5</string>
    <string name="todo10">todo10</string>
    <string name="text1">Seus dados priv. estão seguros</string>
    <string name="text2">Este aplicativo não pode acessar seus dados privados.</string>
    <string name="text3">Não há custos de dados móveis</string>
    <string name="text4">O telefone deve estar conectado à rede Wi-Fi.</string>
    <string name="text5">Esse aplicativo é um protótipo com finalidade acadêmica, para apresentação do Trabalho de Conclusão de Curso, na instituição Etec de Embu.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_1">Tempo real</string>
    <string name="tab_text_2">Histórico</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab2">Tab2</string>
    <string name="testbtn_2">TESTBTN 2</string>
    <string name="testbtn_1">TESTBTN 1</string>
    <string name="consumo_de_energia">Energia (Kw/h)</string>
    <string name="consumo_de_gua">Água (L/min)</string>
    <string name="hora">Horário</string>
    <string name="todo17">TODO17</string>
    <string name="valor_aparece_aqui">VALOR APARECE AQUI</string>
    <string name="valor">VALOR</string>
    <string name="click_here">Click Here</string>
    <string name="atualizar">atualizar</string>
    <string name="anterior">Medições</string>
    <string name="pr_ximo">Histórico</string>
    <string name="todo">TODO</string>
    <string name="menu">Menu</string>
    <string name="consumo_em_r">Consumo em R$</string>
    <string name="todo100">TODO100</string>
    <string name="hist_rico">Histórico</string>
</resources>