<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="283dp"
        android:layout_height="244dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo3"
            android:src="@mipmap/tela2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_marginBottom="192dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="51dp"
            android:layout_height="41dp"
            android:contentDescription="@string/todo5"
            android:src="@mipmap/cadeado"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="54dp"
        android:layout_marginBottom="188dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginBottom="112dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="51dp"
            android:layout_height="42dp"
            android:contentDescription="@string/todo4"
            android:src="@mipmap/wifi">

        </ImageView>

    </LinearLayout>

    <LinearLayout
    android:layout_width="209dp"
    android:layout_height="54dp"
    android:layout_marginBottom="112dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.634"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:textSize="12sp" />

</LinearLayout>

</android.support.constraint.ConstraintLayout>