<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="328dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="334dp"
            android:layout_height="351dp"
            android:contentDescription="@string/todo1"
            android:src="@mipmap/imagem_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="59dp"
        android:layout_marginBottom="164dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            android:textColor="?android:attr/colorForeground"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="69dp"
        android:layout_marginBottom="68dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="111dp"
            android:layout_height="67dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="181dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="44dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/smart_measurer" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>